performance - adjust layers/overflow/will-change to prevent unnecessary repaints

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,7 @@ body {
 .grid-justify-start {
   justify-self: start;
 }
+
+.force-layer {
+  transform: translateZ(0);
+}
